[gd_scene load_steps=5 format=3 uid="uid://cqwa28tt0nxh"]

[ext_resource type="Script" path="res://resources/interfaces/battle_screen/modules/battle_health_bar/battle_health_bar.gd" id="1_a1qow"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dmtpn"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0.4)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hob4q"]
bg_color = Color(0.882353, 0, 0.117647, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t3jtl"]
bg_color = Color(0.49361, 0.670453, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="BattleHealthBar" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_a1qow")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dmtpn")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Knight"

[node name="Health" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="RemainingHealth" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/Health"]
layout_mode = 2
text = "75"

[node name="Separator" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/Health"]
layout_mode = 2
text = "/"

[node name="MaxHealth" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/Health"]
layout_mode = 2
text = "100"

[node name="HealthBar" type="ProgressBar" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_hob4q")
step = 1.0
value = 75.0
show_percentage = false

[node name="EnergyBar" type="ProgressBar" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 15)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_t3jtl")
max_value = 5.0
step = 1.0
value = 2.0
show_percentage = false
